# sw-mepa

./: CMakeLists.txt  Jenkinsfile  Jenkinsfile_UNGE
.cmake/: aggr-artifacts.rb  artifactory-ci-upload  backwards-compatibility-check.rb  backwards-compatibility-check_.rb  build-docs.rb  build-licenses.rb  cmake-presets.yaml  cmake-presets_new.yaml  copyright.rb  create_cmake_project.rb  create_cmake_project_new.rb  licenses.rb  licenses_lib.rb  pod-base.yaml  pod-build.yaml  release.rb  release.yaml  release_note_disclaimer.txt  release_utils.rb  source-prepare.rb
.cmake/docker/: Dockerfile  entrypoint.sh  mchp-ca.cer  mscc-install-pkg
board-configs/: CMakeLists.txt
board-configs/include/microchip/ethernet/board/: api.h
board-configs/include/microchip/ethernet/board/api/: phy.h  phy_ts.h  poe_ctrl.h  types.h
board-configs/src/: meba_aux.c  meba_generic.c  meba_generic.h  meba_phy_generic.c  meba_phy_malibu.c  meba_poe_generic.c
board-configs/src/drivers/: phy.c  phy_ts.c  poe_driver.c  poe_driver.h
board-configs/src/lan966x/: lan966x_poe_hw_cfg.h  meba.c  meba_poe.c  synce.c  tod.c
board-configs/src/sparx5/: meba.c  meba_common.h  meba_lan969x.c  meba_poe.c  sparx5_poe_hw_cfg.h  synce.c  tod.c
me/include/microchip/ethernet/: common.h
mepa/: CMakeLists.txt
mepa/.cmake/: cmake-presets.yaml  create_cmake_project.rb  mepa-macros.cmake
mepa/aqr/: CMakeLists.txt
mepa/common/include/: mepa_driver.h  mepa_macsec_driver.h  mepa_os_lmstax.h
mepa/common/src/: phy.c
mepa/docs/: basic.adoc  eee.adoc  events.adoc  getting-started.adoc  introduction.adoc  lan8814-chip-specific.adoc  linkup_config.adoc  macsec.adoc  mepa-layers-overview.graphml  mepa_instantiation.adoc  phy-reset-considerations.adoc  readme.adoc  sitemap.yaml  timestamp.adoc  warm-restart-phy.adoc
mepa/docs/release-notes/: mepa-2022.09.adoc  mepa-2022.12.adoc  mepa-2023.03.adoc  mepa-2023.09.adoc  mepa-2024.09.adoc  mepa-2024.12.adoc
mepa/docs/resources/: api-doc.js  asciidoctor-default.css
mepa/docs/scripts/: Gemfile  dg.rb
mepa/dummy_phy/: CMakeLists.txt
mepa/dummy_phy/src/: dummy_phy.c
mepa/include/microchip/ethernet/phy/api/: phy.h  phy_macsec.h  phy_ts.h  types.h
mepa/intel/: CMakeLists.txt  phy_driver.c
mepa/intel/GPY_API_v251/: LICENSE
mepa/intel/GPY_API_v251/doc/: macsec_test_commands.txt
mepa/intel/GPY_API_v251/example/fmx_ffu/: gsw_ioctlcmd_type.h  gsw_types.h  mac_ops.h
mepa/intel/GPY_API_v251/example/macsec_driver/: gpy211_gennl.c
mepa/intel/GPY_API_v251/src/api/phy/: gpy211_chip.c
mepa/intel/GPY_API_v251/src/inc/: gpy211_log.h
mepa/intel/GPY_API_v251/src/inc/registers/p31g/: gphy_fsci_pdi.h  gphy_shell_pdi.h  gphy_ssc_pdi.h  gphydcpm_fcsi.h  gphyxo_fcsi.h  icu_pdi_registers.h  led_bctrl_pdi_registers.h  pm_pdi.h  pvt_pdi_registers.h  rcu_pdi_registers.h  sgmii_macro_registers.h  tbi_pdi.h  top_pdi_registers.h
mepa/intel/GPY_API_v251/src/inc/registers/p34x/: eipi_eip_201_eip201_registers.h
mepa/intel/GPY_API_v251/src/inc/registers/phy/: phy.h  pmapmd.h
mepa/intel/GPY_API_v251/src/os/linux/: os.h
mepa/ksz9031/: CMakeLists.txt
mepa/microchip/common/include/: lan8814_registers.h
mepa/microchip/lan8770/: CMakeLists.txt
mepa/microchip/lan8770/src/: lan8770_private.c  lan8770_tc10.c
mepa/microchip/lan8814/: CMakeLists.txt
mepa/microchip/lan8814/include/microchip/: lan8814_cs.h
mepa/microchip/lan8814/src/: lan8814.c  lan8814_private.h  lan8814_registers.h  lan8814_ts.c  lan8814_ts_registers.h
mepa/microchip/lan884x/: CMakeLists.txt
mepa/microchip/lan887x/: CMakeLists.txt
mepa/microchip/lan887x/src/: lan887x.c  lan887x_registers.h  lan887x_tc10.c
mepa/src/: vtss_private.h
mepa/src/aqr/: CMakeLists.txt
mepa/src/intel/: phy_driver.c
mepa/src/intel/GPY_API_v251/: release_notes.txt
mepa/src/intel/GPY_API_v251/example/fmx_ffu/: gsw_irq.h  lantiq_gsw.h
mepa/src/intel/GPY_API_v251/example/macsec_driver/: gpy211_driver.c
mepa/src/intel/GPY_API_v251/src/api/macsec/: gpy211_macsec.c
mepa/src/intel/GPY_API_v251/src/inc/: gpy211_macsec.h  gpy211_ver.h
mepa/src/ksz9031/: CMakeLists.txt
mepa/src/microchip/: lan8814_ts.c  lan8814_ts_registers.h
mepa/src/vtss/src/: mesa_phy.c
mepa/src/vtss/src/phy_10g/: vtss_malibu_inc.h  vtss_pll5g_procs.c  vtss_pll5g_procs.h  vtss_sd10g65_procs.h
mepa/src/vtss/src/phy_1g/: vtss_phy.c
mepa/vtss/: CMakeLists.txt
mepa/vtss/include/: vtss_macsec_api.h  vtss_phy_10g_api.h  vtss_phy_1g_api.h
mepa/vtss/src/: vtss.c  vtss_macsec.c  vtss_private.h  vtss_stubs.c  vtss_ts.c
mepa/vtss/src/common/: vtss_phy_common.c
mepa/vtss/src/macsec/: vtss_macsec_api.c
mepa/vtss/src/phy_10g/: vtss_phy_10g.c  vtss_phy_10g_malibu.c  vtss_phy_10g_venice.c  vtss_sd10g65_apc_procs.c  vtss_sd10g65_apc_procs.h
mepa/vtss/src/phy_1g/: vtss_phy.c
mepa/vtss/src/ts/: vtss_phy_ts_api.c
mepa_demo/: CMakeLists.txt  cli.c  cli.h  debug.c  imggen.rb  intr.c  json_rpc.c  main.c  main.h  mfi.rb  port.c  spi_reg_read.c
mepa_demo/docs/: diagnostics-demo.adoc  getting-started.adoc  gpio-demo.adoc  introduction.adoc  kat-demo.adoc  loopback-demo.adoc  macsec-demo.adoc  port-config.adoc  sitemap.yaml  supported_hw.adoc  synce-demo.adoc
mepa_demo/docs/resources/: api-doc.js
mepa_demo/docs/scripts/: dg.rb  parse.rb
mepa_demo/examples/: rcl-pn.c  rte-opcua.c  ts_phy.c
mepa_demo/mepa_apps/: phy_demo_apps.c  phy_demo_apps.h  phy_diagnostics.c  phy_gpio_demo.c  phy_gpio_demo.h  phy_kat_demo.c  phy_loopback.c  phy_macsec_demo.c  phy_macsec_demo.h  phy_port_config.c  phy_port_config.h  phy_synce.c
mepa_demo/mepa_scripts/: lan8814_synce_config.json  loopback_config.json  macsec_key.json  phy10g_synce_config.json  port_config.json  port_config.py  port_config_json.json  synce_config.json  synce_config.py
mepa_demo/scripts/: ag2.rb
mepa_demo/test/: example_mrp.rb  example_port_conf_bulk.rb  example_rte_pn.rb  l2_mac_idx.rb  l2_psfp.rb  opc_ob.rb  packet_tx.rb  phy.rb  port_pfc.rb  port_sfp.rb  rcl.rb  rte-bug.rb  rte_ob_restart.rb  rte_ob_time.rb  rte_udp_ob.rb  suite_packet.rb  synce.rb
(+21 files in other folders)
